syntax = "proto3";

option go_package = "apron.network/gateway/models";

message ApronApiKey {
  string key = 1;
  string service_name = 2;
  int64 issued_at = 3;
  int64 expired_at = 4;
}

message ApronService {
  string name = 1;
  string base_url = 2;
  string schema = 3;
}

message ApronUser {
  string email = 1;
}

message AccessLog {
  int64 ts = 1;
  string service_name = 2;
  string user_key = 3;
  string request_ip = 4;
  string request_path = 5;
}
